[gd_scene load_steps=3 format=3 uid="uid://cqw4pm53rb1um"]

[ext_resource type="Script" path="res://Source/UI/Avatar/Avatar.gd" id="1_0vqvy"]
[ext_resource type="Texture2D" uid="uid://43t83uf2xasg" path="res://Data/Textures/NPCs/Male4.png" id="1_x1ybo"]

[node name="Avatar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0vqvy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 210.0
offset_bottom = 60.0
color = Color(1, 0.74902, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("1_x1ybo")
centered = false
region_enabled = true
region_rect = Rect2(6, 55, 20, 20)

[node name="HealthBar" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 60.0
offset_right = 210.0
offset_bottom = 30.0
color = Color(0, 0.890196, 0.0156863, 1)

[node name="health_l" type="Label" parent="HealthBar"]
layout_mode = 0
offset_left = 45.0
offset_right = 85.0
offset_bottom = 26.0
text = "100"

[node name="Label" type="Label" parent="HealthBar"]
layout_mode = 0
offset_left = 75.0
offset_right = 115.0
offset_bottom = 26.0
text = "/"

[node name="max_health_l" type="Label" parent="HealthBar"]
layout_mode = 0
offset_left = 81.0
offset_right = 121.0
offset_bottom = 26.0
text = "100"

[node name="StaminaBar" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 30.0
offset_right = 210.0
offset_bottom = 60.0
color = Color(1, 0.341176, 0.341176, 1)

[node name="stamina_l" type="Label" parent="StaminaBar"]
layout_mode = 0
offset_left = 45.0
offset_right = 85.0
offset_bottom = 26.0
text = "100"

[node name="Label" type="Label" parent="StaminaBar"]
layout_mode = 0
offset_left = 75.0
offset_right = 115.0
offset_bottom = 26.0
text = "/"

[node name="max_stamina_l" type="Label" parent="StaminaBar"]
layout_mode = 0
offset_left = 81.0
offset_right = 121.0
offset_bottom = 26.0
text = "100"
